// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`maps state and dispatch to props - default 1`] = `
Array [
  Object {
    "active": false,
    "onClick": [Function],
    "typ": "maraton",
    "visible": true,
  },
  Object {
    "active": false,
    "onClick": [Function],
    "typ": "půlmaraton",
    "visible": true,
  },
  Object {
    "active": false,
    "onClick": [Function],
    "typ": "cyklo",
    "visible": true,
  },
  Object {
    "active": false,
    "onClick": [Function],
    "typ": "koloběžka",
    "visible": true,
  },
]
`;

exports[`maps state and dispatch to props - default 2`] = `Array []`;

exports[`maps state and dispatch to props - non-default 1`] = `
Array [
  Object {
    "active": true,
    "onClick": [Function],
    "typ": "maraton",
    "visible": true,
  },
]
`;

exports[`maps state and dispatch to props - non-default 2`] = `
Array [
  Object {
    "active": false,
    "id": "5a587e1a051c181132cf83b8",
    "onClick": [Function],
    "pohlavi": "muž",
    "typ": "maraton",
    "vek": Object {
      "max": 39,
      "min": 18,
    },
    "zkratka": "1M",
  },
  Object {
    "active": true,
    "id": "5a587e1a051c181132cf83ba",
    "onClick": [Function],
    "pohlavi": "muž",
    "typ": "maraton",
    "vek": Object {
      "max": 49,
      "min": 40,
    },
    "zkratka": "2M",
  },
  Object {
    "active": false,
    "id": "5a587e1a051c181132cf83bc",
    "onClick": [Function],
    "pohlavi": "muž",
    "typ": "maraton",
    "vek": Object {
      "max": 59,
      "min": 50,
    },
    "zkratka": "3M",
  },
  Object {
    "active": false,
    "id": "5a587e1b051c181132cf83d6",
    "onClick": [Function],
    "pohlavi": "muž",
    "typ": "maraton",
    "vek": Object {
      "max": 69,
      "min": 60,
    },
    "zkratka": "4M",
  },
  Object {
    "active": false,
    "id": "5a587e1b051c181132cf83d8",
    "onClick": [Function],
    "pohlavi": "muž",
    "typ": "maraton",
    "vek": Object {
      "max": 150,
      "min": 70,
    },
    "zkratka": "5M",
  },
  Object {
    "active": false,
    "id": "5a587e1a051c181132cf83c0",
    "onClick": [Function],
    "pohlavi": "žena",
    "typ": "maraton",
    "vek": Object {
      "max": 39,
      "min": 18,
    },
    "zkratka": "1Ž",
  },
  Object {
    "active": false,
    "id": "5a587e1a051c181132cf83c1",
    "onClick": [Function],
    "pohlavi": "žena",
    "typ": "maraton",
    "vek": Object {
      "max": 49,
      "min": 40,
    },
    "zkratka": "2Ž",
  },
  Object {
    "active": false,
    "id": "5a587e1a051c181132cf83c2",
    "onClick": [Function],
    "pohlavi": "žena",
    "typ": "maraton",
    "vek": Object {
      "max": 59,
      "min": 50,
    },
    "zkratka": "3Ž",
  },
  Object {
    "active": false,
    "id": "5a587e1b051c181132cf83dc",
    "onClick": [Function],
    "pohlavi": "žena",
    "typ": "maraton",
    "vek": Object {
      "max": 69,
      "min": 60,
    },
    "zkratka": "4Ž",
  },
  Object {
    "active": false,
    "id": "5a587e1b051c181132cf83de",
    "onClick": [Function],
    "pohlavi": "žena",
    "typ": "maraton",
    "vek": Object {
      "max": 150,
      "min": 70,
    },
    "zkratka": "5Ž",
  },
]
`;

exports[`maps state and dispatch to props - non-default 3`] = `Array []`;
